Sat May 14 04:19:06 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* NEWS: Describe altered behaviour for RSA and DSA public key
	encoding. [Ruby 1.9 - Bug #4421, Bug #4422]
	[ruby-core:35327,35328]

Sat May 14 02:57:52 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/ipaddr.rb (unless Socket):  Document valid*? methods.  Patch by
	  Sebastian Martinez.  [Ruby 1.9 - Feature #4687]

Sat May 14 02:54:04 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rexml/functions.rb:  Add some documentation for REXML::Functions.
	  Patch by Sebastian Martinez.  [Ruby 1.9 - Feature #4688]

Sat May 14 02:51:42 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/resolv.rb:  Hide private method and state-tracking constants from
	  RDoc.  Patch by Mark Turner.  [Ruby 1.9 - Feature #4691]

Fri May 13 19:23:21 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* numeric.c (flo_coerce): Add #flo_coerce documentation.
	  Patch by Sebastian Martinez.
	  https://github.com/ruby/ruby/pull/21

Fri May 13 18:42:22 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* README.EXT: fix typo.  Patch by William Blackerby.
	  https://github.com/ruby/ruby/pull/19

	* README.EXT.ja: ditto.

Fri May 13 15:22:34 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_select): check invalid handle before doing
	  select operations.  see [ruby-dev:43513], [ruby-dev:43535]

Fri May 13 08:34:00 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/rdoc.rb:  Output summary after documentation report.
	* lib/rdoc/stats/normal.rb:  Don't output information for users when
	  we're not on a TTY

Fri May 13 07:49:02 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/fileutils.rb:  Hide internal methods from RDoc.  Patch by Darragh
	  Curran.  [Ruby 1.9 - Bug #4684]

Fri May 13 07:36:23 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/webrick/httpservlet/erbhandler.rb:  Add documentation.

Fri May 13 07:04:33 2011  Eric Hodel  <drbrain@segment7.net>
