@@ -1,9 +1,10 @@
-#
 # = uri/https.rb
 #
 # Author:: Akira Yamada <akira@ruby-lang.org>
 # License:: You can redistribute it and/or modify it under the same term as Ruby.
 # Revision:: $Id$
+#
+# See URI for general documentation
 #
 
 require 'uri/http'
