@@ -1,4 +1,3 @@
-#
 # = uri/ldap.rb
 #
 # Author::
@@ -8,6 +7,8 @@
 #   URI::LDAP is copyrighted free software by Takaaki Tateishi and Akira Yamada.
 #   You can redistribute it and/or modify it under the same term as Ruby.
 # Revision:: $Id$
+#
+# See URI for general documentation
 #
 
 require 'uri/generic'
